# playlist-generator

./: Cargo.toml  Dockerfile
src/: config.rs  db.rs  main.rs  playlist.rs
src/routes/: generate.rs  listing.rs  listing.sql  mod.rs  playlist.rs  playlist.sql
